[package]
name = "continuously_backup_cdylib"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stratum"
path = "src/lib.rs"
crate-type = ["cdylib"]      # Creates dynamic lib

[dependencies]
#futures = "0.3"
continuously_backup_lib = { path = "../continuously_backup_lib" }

[build-dependencies]
cbindgen = "0.27.0"
