[package]
name = "continuously_backup_lib"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
jsonwebtoken = "9.3.0"
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
ureq = { version = "2.10.1", features = ["json", "charset"] }
url = "2.5.4"
#futures = "0.3"
